--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lodash": "^4.14.0",
     "vue": "^1.0.26",
     "vue-loader": "^8.5.2",
-    "vue-resource": "^0.9.3"
+    "vue-resource": "^0.9.3",
+    "webpack-stream": "github:jeroennoten/webpack-stream#patch-1"
   }
 }
