--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "bootstrap-sass": "^3.3.7",
     "buble": "^0.13.1",
+    "font-awesome": "^4.6.3",
     "gulp": "^3.9.1",
     "jquery": "^3.1.0",
     "laravel-elixir": "^6.0.0-9",
@@ -17,5 +18,6 @@
     "vue-loader": "^8.5.2",
     "vue-resource": "^0.9.3",
     "webpack-stream": "github:jeroennoten/webpack-stream#patch-1"
-  }
+  },
+  "dependencies": {}
 }
